--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,140 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
+body {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  
 }
 
+/* shared styles */
+.button-primary {
+  font-size: 16px;
+  font-weight: 600;
+  color: #ffffff;
+  background-color: rgba(70, 145, 101, 1);
+  padding: 12px 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
+/* start header section */
+.header-container {
+  width: 85%;
+  max-width: 1360px;
+  margin: 16px 120px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-menu ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-menu li {
+  list-style-type: none;
+  margin-right: 32px;
+}
+
+.nav-menu a {
+  text-decoration: none;
+  color: black;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.banner {
+  background-image: url("../assets/hero-bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.banner-container {
+  padding: 115px 0 179px;
+}
+
+.banner-content {
+  width: 85%;
+  max-width: 1360px;
+  text-align: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.first-text,
+.heading-btn2 {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff;
+  border-radius: 50px;
+  padding: 8px 12px;
+  font-size: 16px;
+  color: #469165;
+  gap: 3px;
+  margin-bottom: 24px;
+}
+
+.banner-content h1 {
+  font-style: Bold;
+  font-size: 72px;
+  line-height: 84px;
+  text-align: center;
+  text-transform: capitalize;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+
+.banner-content .heading-text {
+  font: 18px;
+  font-weight: 300;
+  line-height: 24px;
+  color: #ffffff;
+  margin-bottom: 32px;
+}
+
+.button-container {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn {
+  background: none;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 10px 20px;
+  border-radius: 5px;
+  display: inline-flex;
+  align-items: center;
+  transition: 0.3s;
+  outline: none;
+}
+
+.btn-green {
+  background-color: #469165;
+  color: #ffffff;
+  border: none;
+}
+
+.btn-outline {
+  border: 1px solid white;
+  color: white;
+}
+
+.btn-green .btn-icon {
+  margin-left: 10px;
+}
+
+.btn-outline .btn-icon {
+  margin-right: 10px;
+}
+/* end header section */
