--- a/styles/style.css
+++ b/styles/style.css
@@ -138,3 +138,74 @@ body {
   margin-right: 10px;
 }
 /* end header section */
+
+/* start card section */
+.card {
+  background-color: rgba(248, 226, 199, 0.192);
+}
+
+.card-content {
+  text-align: center;
+  width: 85%;
+  max-width: 1360px;
+  margin: 0 auto;
+}
+
+.card-heading h4 {
+  font-size: 48px;
+  font-weight: bold;
+  color: rgba(0, 25, 49, 1);
+  padding-top: 30px;
+}
+
+.card-heading p {
+  font-size: 16px;
+  font-weight: 400;
+  color: rgba(98, 115, 130, 1);
+  margin: 16px auto 44px auto;
+}
+
+.card-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card-info {
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.06);
+  width: 322px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-info .img-icon img {
+  width: 32px;
+}
+
+.img-icon {
+  background-color: #f95555;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 69px 131px 16px 131px;
+}
+
+.card-info h4 {
+  font-size: 26px;
+  font-weight: 600;
+  margin-bottom: 16px;
+  color: rgba(0, 25, 49, 1);
+}
+
+.card-info p {
+  font-size: 16px;
+  color: rgba(98, 115, 130, 1);
+  padding: 0 16px 0 16px;
+}
+/* end card section */
