--- a/styles/style.css
+++ b/styles/style.css
@@ -18,16 +18,35 @@ body {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  transition-duration: 0.4s;
 }
 
+.nav-button:hover {
+  background-color: red;
+  color: white;
+}
+
+.button-container button:hover {
+  background-color: red;
+  color: white;
+}
 /* start header section */
 .header-container {
   width: 85%;
   max-width: 1360px;
-  margin: 16px 120px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 85%;
+  max-width: 1360px;
+  margin: 16px 120px;
 }
 
 .nav-menu ul {
@@ -104,6 +123,11 @@ body {
   gap: 10px;
   align-items: center;
   justify-content: center;
+}
+
+.button-container .btn-outline:hover {
+  background-color: red;
+  color: white;
 }
 
 .btn {
@@ -265,6 +289,7 @@ body {
 /* start think section */
 .think-container {
   width: 85%;
+  max-width: 1360px;
   margin: 0 auto 120px;
   background-color: #f7f6f2;
   border-radius: 12px;
@@ -290,4 +315,67 @@ body {
   margin-bottom: 24px;
   color: rgba(98, 115, 130, 1);
 }
+
+.think-content button {
+  display: flex;
+  margin: 0 auto;
+}
+
+.think-content button img {
+  margin-left: 5px;
+}
+
+.think-btn:hover {
+  background-color: red;
+  color: white;
+}
 /* end think section */
+
+/* start footer section */
+footer {
+  background-color: rgba(0, 25, 49, 1);
+}
+
+.footer-content .social-box {
+  width: 85%;
+  max-width: 1360px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 120px 120px 120px 80px;
+}
+
+.social h3 {
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 16px;
+  color: #ffffff;
+}
+
+.social .socials-icons {
+  margin-right: 16px;
+}
+
+.copy {
+  width: 85%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+footer .copy .line {
+  color: aqua;
+  opacity: 0.25;
+  margin-bottom: 30px;
+}
+
+.copy p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  padding-bottom: 30px;
+  color: rgba(229, 231, 235, 1);
+  opacity:;
+}
+
+/* end footer section */
