--- a/styles/style.css
+++ b/styles/style.css
@@ -359,6 +359,7 @@ footer {
 
 .copy {
   width: 85%;
+  max-width: 1324px;
   margin: 0 auto;
   text-align: center;
 }
@@ -375,7 +376,6 @@ footer .copy .line {
   line-height: 24px;
   padding-bottom: 30px;
   color: rgba(229, 231, 235, 1);
-  opacity:;
 }
 
 /* end footer section */
